# philosophers

./: .gitignore  CMakeLists.txt  Makefile  author  main.c  philo_one  philo_three  philo_two  test.sh
common/includes/: philo_parse.h  philo_time.h  philo_utils.h
common/src/: philo_monitor.c  philo_mutex.c  philo_parse.c  philo_print.c  philo_semaphore.c  philo_time.c  philo_utils.c  philo_utils_memory.c  philo_utils_number.c  philo_utils_string.c
common/test/: test_ft_ultoa.c
includes/: philo_one.h  philo_print.h  philo_three.h  philo_two.h  philo_utils.h  philosophers.h
philo_one/includes/: philo_one.h  philosophers.h
philo_one/src/: main.c  monitor.c  philo_one.c  philo_one_init.c  print.c  time.c
philo_one_src/src/: philo_one.c  philo_one_operations.c
philo_three/src/: philo_three_exit.c  philo_three_init.c  philo_three_operations.c
philo_three_src/includes/: philo_three.h
philo_three_src/src/: philo_three.c
philo_two/includes/: philo_two.h
philo_two/src/: philo_two.c  philo_two_exit.c
philo_two_src/src/: philo_two_init.c  philo_two_operations.c
src/: monitor.c
src/common/: philo_monitor.c  philo_mutex.c  philo_parse.c  philo_print.c  philo_semaphore.c  philo_time.c  philo_utils.c  philo_utils_memory.c  philo_utils_number.c  philo_utils_string.c
src/philo_one/: philo_one.c  philo_one_init.c  philo_one_init2.c  philo_one_operations.c
src/philo_three/: philo_three.c  philo_three_exit.c  philo_three_init.c  philo_three_operations.c
src/philo_two/: philo_two.c  philo_two_exit.c  philo_two_init.c  philo_two_operations.c
test/: test.c  test_ft_atoi.c  test_ft_ultoa.c  test_strings.c
